[gd_scene load_steps=3 format=3 uid="uid://drugun23oc68q"]

[ext_resource type="Script" path="res://enemies/yellow/attack_area.gd" id="1_pure8"]

[sub_resource type="CircleShape2D" id="CircleShape2D_d0jnm"]
radius = 258.002

[node name="attack_area" type="CPUParticles2D"]
amount = 150
speed_scale = 1.5
local_coords = true
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 400.0
initial_velocity_max = 400.0
angular_velocity_min = -180.0
angular_velocity_max = 180.0
orbit_velocity_min = -0.5
orbit_velocity_max = -0.5
angle_min = -180.0
angle_max = 180.0
scale_amount_min = 5.0
scale_amount_max = 5.0
color = Color(1, 1, 0, 1)
script = ExtResource("1_pure8")

[node name="attack_area_hurtbox" type="Area2D" parent="." groups=["enemy", "enemy_attack"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="attack_area_hurtbox"]
visible = false
shape = SubResource("CircleShape2D_d0jnm")

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[connection signal="body_entered" from="attack_area_hurtbox" to="." method="_on_attack_area_hurtbox_body_entered"]
[connection signal="body_exited" from="attack_area_hurtbox" to="." method="_on_attack_area_hurtbox_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
